--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -1,5 +1,8 @@
 @media (max-width: 768px) {
     .phone-wide{
         padding-left: 1.1rem;
-}
+    }
+    .phone-mt{
+        margin-top: 75px;
+    }
 }
