字体离线保存

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 /* 引入 HarmonyOS_Sans_SC_Mediums 字体 */
 @font-face {
-  font-family:HarmonyOS_Sans_SC_Medium;font-style: normal;font-display: swap;
-  src: url('https://cdn.jsdelivr.net/gh/irozhi/HarmonyOS-Sans/HarmonyOS_Sans_SC/HarmonyOS_Sans_SC_Medium.woff2') format('woff2'),
-       url('https://cdn.jsdelivr.net/gh/irozhi/HarmonyOS-Sans/HarmonyOS_Sans_SC/HarmonyOS_Sans_SC_Medium.woff') format('woff');
+  font-family: 'HarmonyOS_Sans_SC_Medium';
+  font-style: normal;
+  font-display: swap;
+  src: url('fonts/HarmonyOS_Sans_SC_Medium.woff2') format('woff2'),
+       url('fonts/HarmonyOS_Sans_SC_Medium.woff') format('woff');
 }
 
 *{font-family:HarmonyOS_Sans_SC_Medium;}
